Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Apr-2012 Jean-Marie Simonet
 $ Correcting wrong ini string value
 $ Updating zh-CN installation ini file
 # [#28398] Missing "remember me" in com_users. Thanks Nils.

20-Apr-2012 Jean-Marie Simonet
 # [#28407] *Browser Settings for new visitors broken in multilanguage. Reverting #28151

18-Apr-2012 Jean-Marie Simonet
 # [#28351] Remove extra images from finder. Thanks Rouven and Michael
 # [#28382] Make Atomic work with sample data. Thanks Elin
 # [#28339] Incorrect parameter passed to onUserAfterDeleteGroup event. Thanks Dennis
 # [#28149] ImageManager Javascript Error. Thanks Benjamin
 # [#28364] JImage wrong JPEG support detection in PHP 5.2. Thanks Pavel and Rouven
 # [#28276] Finder/Smart Search: Deleting an item does not remove it from Finder's index. Thanks CY Lee
 # [#28309] Improve forward compatability with Joomla 3.0 by making JDatabaseException extend RuntimeException. Thanks Rouven

10-Apr-2012 Christophe Demko
 ^ [#28336] e-strict error in com_messages (Elin Waring)

10-Apr-2012 Jean-Marie Simonet
 # [#28287] Fix some differences between platform and cms. Backport CSS changes. Thanks Rouven
 # [#28384] Duplicate 'home' in breadcrumbs in a multi-language site. Thanks Nuno.

09-Apr-2012 Christophe Demko
 # [ #24839] Incorrect tooltip for Sticky column icons in Banner Manager: Banners
 - [#28360] Get rid of assign() and assignRefs() uses in view: Installation (Rouven Weßling)
 -+ [#28305] Remove a few unnecessary import() calls. Add a missing import(). (Rouven Weßling)

07-Apr-2012 Jean-Marie Simonet
 # [#28345] Call to member function of non-object: setDebug(). Thanks Don.

03-Apr-2012 Mark Dexter
 # [#28354] Problem logging out if Public group has admin login permission