@@ -24,7 +24,7 @@ class LanguagesModelLanguage extends JModelAdmin
 	 * @return	JTable
 	 * @since	1.6
 	 */
-	public function getTable($name='', $prefix='', $options = array())
+	public function getTable($name = '', $prefix = '', $options = array())
 	{
 		return JTable::getInstance('Language');
 	}
@@ -189,9 +189,7 @@ class LanguagesModelLanguage extends JModelAdmin
 	 */
 	protected function cleanCache($group = null, $client_id = 0)
 	{
-		parent::cleanCache('_system', 0);
-		parent::cleanCache('_system', 1);
-		parent::cleanCache('com_languages', 0);
-		parent::cleanCache('com_languages', 1);
+		parent::cleanCache('_system');
+		parent::cleanCache('com_languages');
 	}
 }
