@@ -321,7 +321,6 @@ class PluginsModelPlugin extends JModelAdmin
 	 * @since	1.6
 	 */
 	protected function cleanCache($group = null, $client_id = 0) {
-		parent::cleanCache('com_plugins', 0);
-		parent::cleanCache('com_plugins', 1);
+		parent::cleanCache('com_plugins');
 	}
 }
